--- a/MusicClubManager.Cms.Blazor/Pages/Artist/Index.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Artist/Index.razor
@@ -11,9 +11,9 @@
 </SubTitle>
 
 <Navigation>
-    <li><NavLink href="@($"artists/create{query}")">Create</NavLink></li>
+    <li><NavLink href="@($"artists/create")">Create</NavLink></li>
 
-    <li><NavLink href="@($"artists/filters{query}")">Filters</NavLink></li>
+    <li><NavLink href="@($"artists/filters")">Filters</NavLink></li>
 </Navigation>
 
 @if (_pagedServiceResult is not null)
@@ -22,9 +22,9 @@
         <ItemTemplate>
             <ArtistItem Model="artistResult">
                 <Buttons>
-                    <li><NavLink href="@($"artists/{artistResult.Id}{query}")">Edit</NavLink></li>
+                    <li><NavLink href="@($"artists/{artistResult.Id}")">Edit</NavLink></li>
 
-                    <li><NavLink href="@($"artists/delete/{artistResult.Id}{query}")">Delete</NavLink></li>
+                    <li><NavLink href="@($"artists/delete/{artistResult.Id}")">Delete</NavLink></li>
                 </Buttons>
             </ArtistItem>
         </ItemTemplate>
@@ -36,21 +36,23 @@ else
 }
 
 @code {
-    private PagedServiceResult<IList<ArtistResult>>? _pagedServiceResult;
+    [CascadingParameter]
+    public required Pagination Pagination { get; set; }
 
-    private string? query;
+    private PagedServiceResult<IList<ArtistResult>>? _pagedServiceResult;
 
     protected override async Task OnInitializedAsync()
     {
-        await FetchArtists(NavigationManager.GetPaginationRequest() ?? new PaginationRequest { Page = 1, PageSize = 12 }, new ArtistFilter());
+        await FetchArtists(new PaginationRequest { Page = (uint)Pagination.Page, PageSize = (uint)Pagination.PageSize }, new ArtistFilter());
 
         await base.OnInitializedAsync();
     }
 
     private async Task FetchArtists(PaginationRequest paginationRequest, ArtistFilter artistFilter)
     {
-        query = '?' + paginationRequest.ToQueryString();
-
         _pagedServiceResult = await ArtistApiService.GetAll(paginationRequest, new ArtistFilter());
+
+        Pagination.Page = (int)_pagedServiceResult.Page;
+        Pagination.PageSize = (int)_pagedServiceResult.PageSize;
     }
 }
