--- a/MusicClubManager.Cms.Blazor/Pages/Artist/Index.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Artist/Index.razor
@@ -22,7 +22,7 @@
         <ItemTemplate>
             <ArtistItem Model="artistResult">
                 <Buttons>
-                    <li><NavLink href="@($"artists/{artistResult.Id}")">Edit</NavLink></li>
+                    <li><NavLink href="@($"artists/edit/{artistResult.Id}")">Edit</NavLink></li>
 
                     <li><NavLink href="@($"artists/delete/{artistResult.Id}")">Delete</NavLink></li>
                 </Buttons>
