--- a/MusicClubManager.Cms.Blazor/Pages/Image/Create.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Image/Create.razor
@@ -31,18 +31,10 @@
 
     private async Task Submit(CreateImageFormModel model)
     {
-        if (_model.BrowserFile is not { Size: > 0 } file)
+        if(model.ToMultipartFormDataContent() is not { } content)
         {
             return;
         }
-
-        var content = new MultipartFormDataContent();
-        var fileContent = new StreamContent(file.OpenReadStream());
-        fileContent.Headers.ContentType = new System.Net.Http.Headers.MediaTypeHeaderValue(file.ContentType);
-        content.Add(fileContent, "file", file.Name);
-
-        content.Add(new StringContent(model.Alt ?? file.Name), "Alt");
-        content.Add(new StringContent(file.ContentType), "ContentType");
 
         var serviceResult = await ImageApiService.Create(content);
 
