inherit + cascade pagination & filter from contextlayout

--- a/MusicClubManager.Cms.Blazor/Layout/ArtistLayout.razor
+++ b/MusicClubManager.Cms.Blazor/Layout/ArtistLayout.razor
@@ -1,16 +1,8 @@
-﻿@inherits Context
+﻿@inherits ContextLayout<ArtistFilter>
 
 @ParentContent
 
-<CascadingValue Value="Pagination">
-    <CascadingValue Value="Filter">
-        @Body
-    </CascadingValue>
-</CascadingValue>
-
 @code {
-    public ArtistFilter Filter { get; set; } = new();
-
     public ArtistLayout() : base()
     {
         Title = "Artists";
