--- a/MusicClubManager.Cms.Blazor/_Imports.razor
+++ b/MusicClubManager.Cms.Blazor/_Imports.razor
@@ -22,6 +22,7 @@
 @using MusicClubManager.Cms.Blazor.Interfaces
 @using MusicClubManager.Cms.Blazor.Models.Contexts
 @using MusicClubManager.Cms.Blazor.Models.FormModels
+@using MusicClubManager.Cms.Blazor.Pages.Shared
 @using MusicClubManager.Dto.Enums
 @using MusicClubManager.Dto.Filters
 @using MusicClubManager.Dto.Result
