--- a/MusicClubManager.Cms.Blazor/Pages/Artist/EditSelectImage.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Artist/EditSelectImage.razor
@@ -2,34 +2,13 @@
 
 @inherits SelectImageBase
 
-@layout CreateArtistLayout
+@layout EditArtistLayout
 
-@inject ImageApiService ImageApiService
-
-<SubTitle ReturnUrl="@($"artists/edit/{ArtistId}")" ReturnTitle="edit">
-    Edit: select image
-</SubTitle>
-
-<Navigation>
-    <li><NavLink href="@($"artists/edit/{ArtistId}/select-image/filters")">Filters</NavLink></li>
-</Navigation>
-
-@if (pagedServiceResult is not null)
-{
-    <PagedList PagedServiceResult="pagedServiceResult" Context="imageResult" OnPageChanged="async (pagination) => pagedServiceResult = await ImageApiService.GetAll(pagination.ToPaginationRequest())">
-        <ItemTemplate>
-            <ImageItem Model="imageResult">
-                <Buttons>
-                    <li><button @onclick="@(() => Select(imageResult.Id, $"artists/edit/{ArtistId}"))">Select</button></li>
-                </Buttons>
-            </ImageItem>
-        </ItemTemplate>
-    </PagedList>
-}
-else
-{
-    <Spinner />
-}
+<SelectImage>
+    <Selector Context="id">
+        <button @onclick="@(() => Select(id, $"artists/edit/{ArtistId}"))">Select</button>
+    </Selector>
+</SelectImage>
 
 @code {
     [Parameter]
