--- a/MusicClubManager.Cms.Blazor/Pages/Artist/EditSelectImage.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Artist/EditSelectImage.razor
@@ -5,9 +5,9 @@
 @layout EditArtistLayout
 
 <SelectImage>
-    <Selector Context="id">
-        <button @onclick="@(() => Select(id, $"artists/edit/{ArtistId}"))">Select</button>
-    </Selector>
+    <Buttons Context="id">
+        <li><button @onclick="@(() => Select(id, $"artists/edit/{ArtistId}"))">Select</button></li>
+    </Buttons>
 </SelectImage>
 
 @code {
