--- a/MusicClubManager.Cms.Blazor/Layout/EditArtistLayout.razor
+++ b/MusicClubManager.Cms.Blazor/Layout/EditArtistLayout.razor
@@ -2,10 +2,12 @@
 
 @layout ArtistLayout
 
-<CascadingValue Value="Model">
+<CascadingValue Value="Context">
     @Body
 </CascadingValue>
 
 @code {
-    public ArtistFormModel Model { get; set; } = new();
+    // public ArtistFormModel? Model { get; set; }
+
+    public CreateEditArtistContext Context { get; set; } = new();
 }
