--- a/MusicClubManager.Cms.Blazor/Pages/Artist/CreateImage.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Artist/CreateImage.razor
@@ -26,7 +26,7 @@
 
 @code {
     [CascadingParameter, EditorRequired]
-    public required ArtistFormModel ArtistFormModel { get; set; }
+    public required CreateEditArtistContext Context { get; set; }
 
     private CreateImageFormModel createImageModel = new();
 
@@ -38,12 +38,15 @@
         }
 
         if ((await ImageApiService.Create(content))?.Data is not { } imageResult)
-    {
+        {
             return;
         }
 
-        ArtistFormModel.ImageId = imageResult.Id;
+        if(Context.Model is not null)
+        {
+            Context.Model.ImageId = imageResult.Id;
 
-        NavigationManager.NavigateTo("artists/create");
+            NavigationManager.NavigateTo("artists/create");
+        }
     }
 }
