--- a/MusicClubManager.Cms.Blazor/Pages/Artist/Edit.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Artist/Edit.razor
@@ -11,22 +11,22 @@
 </SubTitle>
 
 
-@if (Model is not null)
+@if (Context.Model is not null)
 {
-    <Form TModel="ArtistFormModel" Model="Model" OnValidSubmit="() => Submit(Model)">
+    <Form TModel="IArtistFormModel" Model="Context.Model" OnValidSubmit="() => Submit(Context.Model)">
         <Template>
-            <ArtistInputs Model="Model"></ArtistInputs>
+            <ArtistInputs Model="Context.Model"></ArtistInputs>
 
             <div>
                 <label for="image">Image</label>
                 @if (imageServiceResult?.Data is { } imageResult)
                 {
-                    Model.ImageId = imageResult.Id; //use hidden input??
+                    Context.Model.ImageId = imageResult.Id; //use hidden input??
 
                     <ImageItem Model="imageResult" />
 
                     <Navigation>
-                        <li><button type="button" @onclick="() => { Model.ImageId = null; imageServiceResult = null;}">Clear selection</button></li>
+                        <li><button type="button" @onclick="() => { Context.Model.ImageId = null; imageServiceResult = null;}">Clear selection</button></li>
                     </Navigation>
                 }
                 else
@@ -56,7 +56,7 @@ else
 
 @code {
     [CascadingParameter, EditorRequired]
-    public required ArtistFormModel Model { get; set; }
+    public required CreateEditArtistContext Context { get; set;  }
 
     [Parameter]
     public int Id { get; set; }
@@ -65,9 +65,12 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        await FetchArtist(Id);
+        if(Context.Model is null)
+        {
+            await FetchArtist(Id);
+        }  
 
-        if (Model.ImageId is { } imageId)
+        if (Context.Model?.ImageId is { } imageId)
         {
             imageServiceResult = await ImageApiService.Get(imageId);
         }
@@ -82,31 +85,31 @@ else
         if (artistServiceResult?.Data is { } artistResult)
         {
 
-            Model.Description = artistResult.Description;
-            Model.ImageId ??= artistResult.ImageResult?.Id;
-            Model.Name = artistResult.Name;
+            // Model.Description = artistResult.Description;
+            // Model.ImageId ??= artistResult.ImageResult?.Id;
+            // Model.Name = artistResult.Name;
 
-            // Model = new ArtistFormModel
-            // {
-            //     Description = artistResult.Description,
-            //     ImageId = artistResult.ImageResult?.Id,
-            //     Name = artistResult.Name
-            // };
+            Context.Model = new ArtistFormModel
+            {
+                Description = artistResult.Description,
+                ImageId = artistResult.ImageResult?.Id,
+                Name = artistResult.Name
+            };
         }
     }
 
-    private async Task Submit(ArtistFormModel _model)
+    private async Task Submit(IArtistFormModel model)
     {
-        if (string.IsNullOrWhiteSpace(_model.Name))
+        if (string.IsNullOrWhiteSpace(model.Name))
         {
             return;
         }
 
         var request = new ArtistRequest
             {
-                Name = _model.Name,
-                Description = _model.Description,
-                ImageId = _model.ImageId
+                Name = model.Name,
+                Description = model.Description,
+                ImageId = model.ImageId
             };
 
         if ((await ArtistApiService.Update(Id, request)).Data is not { } artistResult)
