--- a/MusicClubManager.Cms.Blazor/Pages/Image/Create.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Image/Create.razor
@@ -1,43 +1,10 @@
-﻿@page "/images/create";
+﻿@page "/images/create"
 
 @layout ImageLayout
 
-@inject ImageApiService ImageApiService
 @inject NavigationManager NavigationManager
 
-<SubTitle ReturnUrl="images" ReturnTitle="Index">
-    Create
-</SubTitle>
-
-<Form TModel="IImageFormModel" Model="_model" OnValidSubmit="() => Submit(_model)" >
-    <Template>
-        <ImageInputs Model="_model" />
-
-        <Buttons>
-            <li><button type="submit">Create</button></li>
-
-            <li><button type="reset" class="warning">Reset</button></li>
-        </Buttons>
-    </Template>
-</Form>
-
-@code {
-    private IImageFormModel _model = new CreateImageFormModel();
-
-    private string query => new Uri(NavigationManager.Uri).Query;
-
-    private async Task Submit(IImageFormModel model)
-    {
-        if(model.ToMultipartFormDataContent() is not { } content)
-        {
-            return;
-        }
-
-        if ((await ImageApiService.Create(content))?.Data is null)
-        {
-            return;
-        }
-
-        NavigationManager.NavigateTo($"images{query}");
-    }
-}
+<CreateImage OnSubmit="@(() => NavigationManager.NavigateTo("images"))"
+             ReturnTitle="Index"
+             ReturnUrl="images"
+             Title="Create" />
