--- a/MusicClubManager.Ui.Mvc/Views/Shared/_Layout.cshtml.css
+++ b/MusicClubManager.Ui.Mvc/Views/Shared/_Layout.cshtml.css
@@ -5,7 +5,6 @@
 }
 
     header > div {
-        align-items: center;
         display: flex;
         flex-direction: row;
     }
@@ -74,12 +73,16 @@
 
                     header > nav > ul > li > ::deep a:hover {
                         background-color: rgb(0,0,0);
+                        background-color: rgb(40,140,240);
                     }
 
 main {
     background-color: rgb(250,250,250);
     display: flex;
+    flex-direction: column;
     flex-grow: 1;
+    gap: 2em;
+    padding: 1em;
 }
 
 footer {
@@ -108,4 +111,15 @@ footer {
                     align-items: center;
                     display: flex;
                 }
+
+    header {
+        padding: 0 10%;
+    }
+    footer {
+        padding: 1em 10%;
+    }
+
+    main {
+        padding: 2em 10%;
+    }
 }
