--- a/MusicClubManager.Ui.Mvc/Views/_ViewImports.cshtml
+++ b/MusicClubManager.Ui.Mvc/Views/_ViewImports.cshtml
@@ -1,3 +1,9 @@
 ﻿@using MusicClubManager.Ui.Mvc
 @using MusicClubManager.Ui.Mvc.Models
+
+@using MusicClubManager.Dto.Result
+@using MusicClubManager.Dto.Request
+@using MusicClubManager.Dto.Transfer
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
