--- a/MusicClubManager.Cms.Blazor/Pages/Performance/Edit.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Performance/Edit.razor
@@ -69,7 +69,12 @@
                 Duration = performanceResult.Duration,
                 LineupId = performanceResult.LineupResult.Id,
                 Start = performanceResult.Start,
-                Type = performanceResult.Type
+                Type = performanceResult.Type,
+                Name = performanceResult.Name,
+                Bandcamp = performanceResult.Bandcamp,
+                Description = performanceResult.Description,
+                Spotify = performanceResult.Spotify,
+                YouTube = performanceResult.YouTube
             };
 
 
@@ -97,7 +102,7 @@
             return;
         }
 
-        var serviceResult = await PerformanceApiService.Update(PerformanceId, new PerformanceRequest { ArtistId = artistId, LineupId = lineupId, Duration = model.Duration, Start = model.Start, Type = model.Type });
+        var serviceResult = await PerformanceApiService.Update(PerformanceId, new PerformanceRequest { ArtistId = artistId, LineupId = lineupId, Duration = _model.Duration, Start = _model.Start, Type = _model.Type, Bandcamp = _model.Bandcamp, Description = _model.Description, Name = _model.Name, Spotify = _model.Spotify, YouTube = _model.YouTube });
         if (serviceResult.Messages is null)
         {
             NavigationManager.NavigateTo($"lineups/{lineupId}/performances");
